--- a/ImageProcess/ImageProcess.vcxproj
+++ b/ImageProcess/ImageProcess.vcxproj
@@ -170,15 +170,18 @@
     <ClInclude Include="asset2D.h" />
     <ClInclude Include="fileManager.h" />
     <ClInclude Include="keywordManager.h" />
+    <ClInclude Include="log.h" />
     <ClInclude Include="serialize.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Asset2D.cpp" />
     <ClCompile Include="fileManager.cpp" />
     <ClCompile Include="ImageProcess.cpp" />
     <ClCompile Include="keywordManager.cpp" />
+    <ClCompile Include="log.cpp" />
     <ClCompile Include="serialize.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -186,6 +189,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
