把所有测试代码放入 test.cpp log class Dictionary support wchar_t and input

--- a/ImageProcess/ImageProcess.vcxproj.filters
+++ b/ImageProcess/ImageProcess.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClCompile Include="log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestCode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
