--- a/ImageProcess/ImageProcess.vcxproj
+++ b/ImageProcess/ImageProcess.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="image_w.h" />
     <ClInclude Include="keywordManager.h" />
     <ClInclude Include="log.h" />
+    <ClInclude Include="objectSet.h" />
     <ClInclude Include="serialize.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -184,6 +185,7 @@
     <ClCompile Include="image_w.cpp" />
     <ClCompile Include="keywordManager.cpp" />
     <ClCompile Include="log.cpp" />
+    <ClCompile Include="objectSet.cpp" />
     <ClCompile Include="serialize.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
