--- a/ImageProcess/ImageProcess.vcxproj.filters
+++ b/ImageProcess/ImageProcess.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="image_w.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="objectSet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="image_w.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="objectSet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
