061818 iterat sub folder recurse 并且把结果放入两个vector 修掉id产生一直是返回false的bug 可通过analyseObjectSet 了解当下folder是否包括 3d asset.
todo :
把当下folder的3d 2d set 分门产生 2d set 3d Asset

--- a/ImageProcess/ImageProcess.vcxproj
+++ b/ImageProcess/ImageProcess.vcxproj
@@ -168,6 +168,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="asset2D.h" />
+    <ClInclude Include="asset.h" />
     <ClInclude Include="fileManager.h" />
     <ClInclude Include="image_w.h" />
     <ClInclude Include="keywordManager.h" />
@@ -179,6 +180,7 @@
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="asset.cpp" />
     <ClCompile Include="Asset2D.cpp" />
     <ClCompile Include="fileManager.cpp" />
     <ClCompile Include="ImageProcess.cpp" />
