--- a/ImageProcess/ImageProcess.vcxproj.filters
+++ b/ImageProcess/ImageProcess.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="objectSet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="asset.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="objectSet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="asset.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
