062118 fix 一些bug 实现产生2Dasset 以及 格式转换 把产生folder的机制移动到object set下 file manager添加识别 asset 2d 、 3d的机制 修掉kw manager检测到两个不符合规则的kw就判断不能产生ID的问题 修掉keyword json 写错不能识别3d素材的问题
todo:
需要进一步测试3d 好了之后可以开始做 textureset 源文件

--- a/ImageProcess/ImageProcess.vcxproj
+++ b/ImageProcess/ImageProcess.vcxproj
@@ -169,6 +169,7 @@
   <ItemGroup>
     <ClInclude Include="asset2D.h" />
     <ClInclude Include="asset.h" />
+    <ClInclude Include="asset3D.h" />
     <ClInclude Include="fileManager.h" />
     <ClInclude Include="image_w.h" />
     <ClInclude Include="keywordManager.h" />
@@ -181,7 +182,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="asset.cpp" />
-    <ClCompile Include="Asset2D.cpp" />
+    <ClCompile Include="asset2D.cpp" />
+    <ClCompile Include="asset3D.cpp" />
     <ClCompile Include="fileManager.cpp" />
     <ClCompile Include="ImageProcess.cpp" />
     <ClCompile Include="image_w.cpp" />
