062518 修改正确的释放内存的方法 修改tst 为结构体 添加textureset 类 修改tool路径到tool exe 的config文件夹下 把tst 做成singleton 类，为 tst的几个模板做全局变量初始化 添加textet struct 添加textet 类
todo:
objectset :: makeTextet 为 objectset制作textet 结构

--- a/ImageProcess/ImageProcess.vcxproj.filters
+++ b/ImageProcess/ImageProcess.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="tst.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="textureSetManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="textet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -96,6 +102,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="tst.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="textureSetManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="textet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
