--- a/ImageProcess/ImageProcess.vcxproj
+++ b/ImageProcess/ImageProcess.vcxproj
@@ -178,6 +178,8 @@
     <ClInclude Include="serialize.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="textet.h" />
+    <ClInclude Include="textureSetManager.h" />
     <ClInclude Include="tst.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
@@ -199,6 +201,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TestCode.cpp" />
+    <ClCompile Include="textet.cpp" />
+    <ClCompile Include="textureSetManager.cpp" />
     <ClCompile Include="tst.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
