修改了配置文件的写法 -> 全部放在config下面

--- a/ImageProcessConfig/WorkingPath.ini
+++ b/ImageProcessConfig/WorkingPath.ini
@@ -6,3 +6,10 @@ tstDir=e:/nicholas_rwc_jx4_data/sword3-code_S/trunk/sword3-products/trunk/Editor
 P4root=e:/nicholas_rwc_jx4_data
 textetSourceDir=JX4_SourceData/Graphics/MaterialLib/Scans
 textetDestDir=data/Graphics/materiallib/scans
+
+[tool]
+kwJson=fileKW.json
+idMapJson=IDMAP.json
+dictTxt=en-dictionary.txt
+usageNameJson=usageNameMap.json
+logTxt=log.txt
