070918 完全分开2d asset 和 textet 的产生 把textet输出路径写入ini
todo：
log机制不完善,需要时时刻刻输出而不是等最后才一起输出.
支持中文的sub文件夹
修改iniFile 读取方法

--- a/ImageProcessConfig/WorkingPath.ini
+++ b/ImageProcessConfig/WorkingPath.ini
@@ -6,6 +6,7 @@ tstDir=e:/nicholas_rwc_jx4_data/sword3-code_S/trunk/sword3-products/trunk/Editor
 P4root=e:/nicholas_rwc_jx4_data
 textetSourceDir=JX4_SourceData/Graphics/Megascans
 textetDestDir=data/Graphics/materiallib/scans
+textetExport=d:/我的
 
 [tool]
 kwJson=fileKW.json
