071418 修改log，在ini之前创建 修改config与exe位置到目录文件

--- a/ImageProcess/ImageProcess.vcxproj
+++ b/ImageProcess/ImageProcess.vcxproj
@@ -165,6 +165,9 @@
       <AdditionalLibraryDirectories>C:\ImageMagick\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>CORE_RL_Magick++_.lib;CORE_RL_MagickCore_.lib;CORE_RL_MagickWand_.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(CodeAnalysisInputAssembly) D:\work\assetProcess\ImageProcessing_Magic-\imageProcessTextet</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="asset2D.h" />
